<resources>
    <string name="app_name">BookShare</string>
    <string name="app_description">app_createdBy</string>
    <string name="splash_text">跳过</string>
    <string name="action_settings">注销登录</string>
    <string name="login">登 录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="go">确认</string>
    <string name="forget_password">忘记密码?</string>
    <string name="register">注 册</string>
    <string name="cancel_register">cancel</string>
    <string name="ensurePassWord">再次输入密码</string>
    <string name="nickName">昵称</string>
    <string name="registerInfo">账号密码由6-15位字母数字下划线组成</string>
    <string name="s_mylib">我的书摊</string>
    <string name="s_donate">贡献书籍</string>
    <string name="s_getbook">获取的书籍</string>
    <string name="s_orbook">个人订单</string>
    <string name="s_bookstallNoBook">还没有任何书籍\n   T_T</string>
    <string name="s_morearticle">下拉可加载文章哦~~</string>
    <string name="s_localBook">未上传:</string>
    <string name="s_yunbook">书摊:</string>
    <string name="s_jiaocai">教材</string>
    <string name="s_qita">其它书籍</string>
    <string name="s_jianjie">内容简介:</string>
    <string name="s_delete">删除</string>
    <string name="s_neitontest">本书的特点是，既阐述了发达国家证券市场的一般规律和成熟经验，又介绍了我国证券市场的现行体制；既阐述了现代投资理论，又介绍了具体实用的投资分析</string>
    <string name="s_searchtitle">搜索结果</string>
    <string name="s_jj">简介:</string>
    <string name="s_addsellbook">添加</string>
    <string name="s_bookdetail">书籍详情</string>
    <string name="s_sellstalldes">书摊介绍:</string>
    <string name="s_nickname">昵称</string>
    <string name="s_sex">性别</string>
    <string name="s_stalldes">书摊描述</string>
    <string name="s_xueyuan">学院</string>
    <string name="s_contactway">联系方式</string>
    <string name="s_personalinfo">我的信息</string>
    <string name="s_touxiang">头像</string>
    <string name="s_yonghuming">用户名</string>
    <string name="s_labelok">允许</string>
    <string name="s_labelcancel">不允许</string>
    <string name="s_permission_title_rationale">需要权限</string>
    <string name="permission_read_storage_rationale">获取相册文件需要权限</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="s_updatenickname">修改昵称</string>
    <string name="s_tishinickname">请输入昵称</string>
    <string name="s_ensure">确定</string>
    <string name="s_female">女</string>
    <string name="s_male">男</string>
    <string name="s_cancel">取消</string>
    <string name="s_addstalldes">添加书摊描述</string>
    <string name="s_speaksomething">说点什么吧..(ﾉ◕ヮ◕)ﾉ*:･ﾟ✧</string>
    <string name="s_donatebook">贡献的书籍</string>
    <string name="s_donatejiaocai">贡献教材</string>
    <string name="s_donateotherbooks">贡献其它书籍</string>
    <string name="s_donater">贡献者:</string>
    <string name="s_jiaoyishibai">失败</string>
    <string name="s_jiaoyichenggong">成功</string>
    <string name="s_shujimingchen">书籍名称:</string>
    <string name="s_author">作者:</string>
    <string name="s_pressversion">出版社&amp;&amp;版本:</string>
    <string name="s_orderdatetime">订单日期:</string>
    <string name="s_contactme">联系我</string>
    <string name="s_ordercontactway">联系方式:</string>
    <string name="s_myxueyuan">所属学院:</string>
    <string name="s_orderbook">预订</string>
    <string name="s_allorders">所有订单</string>
    <string name="s_orderdetail">订单详情</string>
    <string name="camera_and_writedoc">拍照需要相机及文件权限</string>
    <string name="s_personalstall">书摊详情</string>
    <string name="s_articletop">-文 章-</string>
    <string name="s_end">完</string>
    <string name="s_wenzhangtishi">仅显示近期内三篇文章</string>
    <string name="s_wangcheng">历史订单</string>

    <!-- 下面是主界面学院的名称-->
    <string name="guangdian">光电学院</string>
    <string name="nengdong">能动学院</string>
    <string name="guanli">管理学院</string>
    <string name="jixie">机械学院</string>
    <string name="waiyu">外语学院</string>
    <string name="huanjian">环建学院</string>
    <string name="yishi">医食学院</string>
    <string name="chupan">出版学院</string>
    <string name="li">理学院</string>
    <string name="cailiao">材料学院</string>
    <string name="jichu">基础学院</string>
    <string name="jixu">继教学院</string>
    <string name="gongji">工程学院</string>
    <string name="zhonyin">中英国际学院</string>
    <string name="zhonde">汉堡国际工程学院</string>
    <string name="sheke">社科学院</string>
    <string name="tiyu">体育部</string>
    <string name="yinyue">音乐系</string>
    <string name="hujiang">沪江学院</string>
    <string name="taikezi">太赫兹学院</string>

    <!-- 这里是第二个发现的fragment里的内容-->
    <string name="find">这里将要写发现书籍的内容</string>

    <!-- 这里将要写我的信息的字符串内容-->
    <string name="myinf">这里将要写我的信息的字符串内容</string>

    <!-- 测试一个随意的标签-->
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur magna tortor, semper eu feugiat eu, vehicula vitae lacus.</string>
</resources>
