<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/first_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/search_begin"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="40dp"
        android:gravity="center_vertical"
        android:layout_margin="3dp"
        android:background="@drawable/search_input_shape"
        android:drawableStart="@drawable/search_icon"
        android:text="@string/search_hint"
        android:textSize="12sp" />
<GridLayout
    android:background="@color/accent_material_dark"
    android:columnCount="4"
    android:rowCount="5"
    android:layout_width="match_parent"
   android:layout_height="match_parent">
    <Button
        android:text="@string/guangdian"
        android:layout_rowWeight="0.25"
        android:layout_columnWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/one"
        />
    <Button
        android:text="@string/nengdong"
        android:layout_rowWeight="0.25"
        android:layout_columnWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/two"
        />
    <Button
        android:text="@string/guanli"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/three"
        />
    <Button
        android:text="@string/jixie"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/four"
        />
    <Button
        android:id="@+id/five"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/waiyu"
        />
    <Button
        android:id="@+id/six"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/huanjian"/>
    <Button
        android:id="@+id/seven"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/yishi"/>
    <Button
        android:id="@+id/eight"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/chupan"
        />
    <Button
        android:id="@+id/nine"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/li"/>
    <Button
        android:id="@+id/ten"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cailiao"/>
    <Button
        android:id="@+id/elven"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/jichu"/>
    <Button
        android:id="@+id/twelve"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/jixu"/>
    <Button
        android:id="@+id/thirteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gongji"/>
    <Button
        android:id="@+id/foutteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zhonyin"/>
    <Button
        android:id="@+id/fifteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zhonde"/>
    <Button
        android:id="@+id/sixteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sheke"/>
    <Button
        android:text="@string/tiyu"
        android:id="@+id/seventeen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <Button
        android:text="@string/yinyue"
        android:id="@+id/eighteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <Button
        android:text="@string/hujiang"
        android:id="@+id/nineteen"
        android:layout_columnWeight="0.25"
        android:layout_rowWeight="0.25"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <Button android:id="@+id/twenty"
            android:text="@string/taikezi"
            android:layout_columnWeight="0.25"
            android:layout_rowWeight="0.25"
            android:layout_width="0dp"
            android:layout_height="0dp"/>
</GridLayout>
</LinearLayout>