<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="400dp"
    android:minWidth="200dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/material_blue_500"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_addstalldes"
            android:textSize="18sp"
            android:textColor="@color/color_white"
            android:layout_centerInParent="true"
            />
        <ImageView
            android:id="@+id/iv_cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:background="@drawable/back_searchdetail"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
    <LinearLayout
        android:background="@color/grey_100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:textColorHint="#c5c5c5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            >
            <EditText
                android:hint="@string/s_speaksomething"
                android:id="@+id/et_stalldes"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:lines="8"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_100"
        >
        <Button
            android:id="@+id/bt_ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/s_ensure"
            android:textColor="@color/material_blue_700"
            />
    </LinearLayout>

</LinearLayout>